change the meta, data, and wal directories to be in $SNAP_DATA
The default location of /var/lib/influxdb isn't writable on Ubuntu-Core, so this was preventing the server from running.
Also, putting the config file into conf rather than in the root of $SNAP_DATA

--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -1,5 +1,10 @@
 #!/bin/sh
 set -e
 
+# ensure the conf directory exists
+if [ ! -d $SNAP_DATA/conf]; then
+	mkdir -p $SNAP_DATA/conf
+fi
+
 # copy the default config file 
-cp $SNAP/conf/influxdb.conf $SNAP_DATA/influxdb.conf
+cp $SNAP/conf/influxdb.conf $SNAP_DATA/conf/influxdb.conf
